@@ -64,6 +64,7 @@ class chooserDialogClass
 		LFSTK_findClass		gFind;
 		bool					fileExists=false;
 		bool					useMulti=false;
+		bool					valid=true;
 
 		void					setSideListMode(QListView::ViewMode mode);
 		void					setFileListMode(QListView::ViewMode mode);
